# fetcher

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pylintrc  pyproject.toml
fetcher/: cli.py  helpers.py
tests/: parse_csv.py  pick_keys.py
