[tool.poetry]
name = "fetcher"
version = "0.1.0"
description = ""
authors = ["Oleksii Dmytrenko <o.dmytrenko@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
black = "^22.1.0"
pylint = "^2.12.2"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
